<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg" >

    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pb_loading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/init_loading"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:text="@string/select_title"
                android:textColor="@color/dialog_title"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/tv_type_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="18dp"
                android:text="@string/select_desc"
                android:textColor="@color/color_title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_type_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/select_sign"
                android:textColor="@color/color_title"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tv_type_weather"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/type_bg_selector"
                            android:drawableTop="@drawable/type_weather_selector"
                            android:gravity="center"
                            android:paddingBottom="6dp"
                            android:text="@string/type_weather"
                            android:textColor="@color/color_text"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tv_type_news"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/type_bg_selector"
                            android:drawableTop="@drawable/type_news_selector"
                            android:gravity="center"
                            android:paddingBottom="6dp"
                            android:text="@string/type_news"
                            android:textColor="@color/color_text"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tv_type_stock"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/type_bg_selector"
                            android:drawableTop="@drawable/type_stock_selector"
                            android:gravity="center"
                            android:paddingBottom="6dp"
                            android:text="@string/type_stock"
                            android:textColor="@color/color_text"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tv_type_joke"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/type_bg_selector"
                            android:drawableTop="@drawable/type_joke_selector"
                            android:gravity="center"
                            android:paddingBottom="6dp"
                            android:text="@string/type_joke"
                            android:textColor="@color/color_text"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tv_type_astrology"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/type_bg_selector"
                            android:drawableTop="@drawable/type_astrology_selector"
                            android:gravity="center"
                            android:paddingBottom="6dp"
                            android:text="@string/type_astrology"
                            android:textColor="@color/color_text"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tv_type_ad"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/type_bg_selector"
                            android:drawableTop="@drawable/type_ad_selector"
                            android:gravity="center"
                            android:paddingBottom="6dp"
                            android:text="@string/type_ad"
                            android:textColor="@color/color_text"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>